...
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorPrimaryDark"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/screen"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/screen" />

    <TextView
        android:id="@+id/screen"
...
